@@ -49,24 +49,8 @@ template <int RTYPE> class MatrixColumn ;
 #include <Rcpp/vector/instantiation.h>
 
 #include <Rcpp/vector/string_proxy.h>
+#include <Rcpp/vector/swap.h>
 
 }  // Rcpp
-
-namespace std {
-	
-#undef RCPP_GENERATE_SWAP
-#define RCPP_GENERATE_SWAP(TYPE,RTYPE) 							\
-	template<> inline void swap< Rcpp::internal::TYPE<RTYPE> >(	\
-		Rcpp::internal::TYPE<RTYPE>& a ,							\
-		Rcpp::internal::TYPE<RTYPE>& b) { 							\
-			a.swap(b) ;												\
-		}
-
-RCPP_GENERATE_SWAP( generic_proxy,VECSXP)
-RCPP_GENERATE_SWAP( generic_proxy,EXPRSXP)
-RCPP_GENERATE_SWAP( string_proxy,STRSXP)
-#undef RCPP_GENERATE_SWAP
-
-}
 
 #endif 
